2008-05-18  Ian Beckwith  <ianb@erislabs.net>

	* Add apropos command (^X^A) for key-binding search.
	* Change GIT_ env vars to GNUIT_ (eg GNUIT_PAGER).
	  Fall back to old names for backwards compatibility.
	* Use mkstemp() for temporary files.
	* Update to gnulib 20080512 commit 6ea7ea7.
	* Fix make distcheck: remove absolute-header.m4 from EXTRA_DIST.

2008-05-07  Ian Beckwith  <ianb@erislabs.net>

	* rewrote gitaction, adding more file types and viewers.

2008-04-13  Ian Beckwith  <ianb@erislabs.net>

	* bumped version to 4.9.4
	* Thanks to Tudor Hulubei for reporting the following:
	  + Use base 1024 when autoscaling file sizes.
	  + Fix sorting by filesize.
	  + Fix current file size display at bottom when no files are selected.
	  + Fix input in incremental-search (^S) mode.
	  + Manually append "B" suffix to sizes in panel info/size display.
	  + Clear screen before restoring, in case restore fails.
	  + gitaction: MacOS: try and run open(1) first on non-textfiles.

2008-03-29  Ian Beckwith  <ianb@erislabs.net>

	* configure.ac: add AC_SYS_LARGEFILE to fix
	  64bit IO on 32 bit systems.
	* Remove obsolete files during install
	  (eg $(datadir)/.gitrc.common).
	* Handle config file lines consisting solely of a comment.
	* README: added note about dependencies.
	* Thanks to Michael Cook for the above suggestions/reports.
	* gitaction: added more viewers.
	* Changed address for bug reports to gnuit-dev@gnu.org.
	* gnuitrc.*: fix comment

2008-02-26  Ian Beckwith  <ianb@erislabs.net>

	* Updated gnulib to 20080214 commit 501a61c5.
	* Added license notices to many files.
	* gitfm:
	  + Scale file sizes to fit available space.
	  + New panel minor mode AbbrevSize (accessed with escape-e-S)
	    Always scale file sizes (to eg 123M).
	  + panel_update_size: always scale (human_autoscale|human_SI|human_B).
	* New config variables: GroupDigits, MaxUnscaledDigits.
	* gnuit.texinfo
	  + fixed typos (Thanks to Ralf Wildenhues).
	  + Documented gitfm changes.